fix: change index.html to look good on mobile

--- a/css/styles.css
+++ b/css/styles.css
@@ -7,64 +7,77 @@ body,td,th,p{
 	color: #333;
 	line-height: 1.5;
 }
+
 body {
 	background-color: #fdfdfd;
 	margin: 0;
 	position:relative;
 }
+
 ul, li {
 	font-family: Arial, Helvetica, sans-serif;
 	font-size: 10pt;
 	color: #333;
 }
+
 a {
 	color: orange;
 	text-decoration: none;
 }
+
 a:hover, a:focus {
 	color: #3397db;
 	text-decoration: none;
 }
+
 a img{
 	border: none 0px #fff;
 }
+
 h1, h2, h3, h4, h5, h6 {
   font-family: Arial, Helvetica, sans-serif;
-  margin: 0 0 20px;
+  margin: 0;
 }
+
 article, aside, canvas, details, figcaption, figure, footer, header, hgroup, menu, nav, section {
 	display: block;
 }
+
 #maincontent {
   background-color: #f3f3f3;
   min-height: 100%;
 }
+
 #footer {
   background-color: #444;
-  color: #aaa;
-  font-size: 8pt;
+  color: #ccc;
+  font-size: 10pt;
   letter-spacing: 1px;
-  padding: 25px;
+  padding: 1.5em;
   text-align: center;
   text-transform: uppercase;
 }
+
 /* ====================== Navigation ====================== */
 nav {
   width: 100%;
-  height: 80px;
   background-color: #252831;
   text-align:center;
 }
+
 nav h1 {
   margin: auto;
+  padding: 0.6em 0;
 }
+
 nav h1 a {
   color: #fff;
   font-size: 14pt;
   font-weight: 200;
-  letter-spacing: 10px;
+  letter-spacing: 9px;
   text-transform: uppercase;
 }
+
 #breadcrumb {
     padding: 10px 40px 16px;
     list-style: none;
@@ -105,28 +118,34 @@ nav h1 a {
 }
 /* ====================== Restaurant Filtering ====================== */
 .filter-options {
-  width: 100%;
-  height: 50px;
-  background-color: #3397DB;
+  background: linear-gradient(#80cbff,#3397DB);
+  display: flex;
+  flex-direction: column;
   align-items: center;
+  padding: 1em;
 }
+
 .filter-options h2 {
   color: white;
+  margin-bottom: 0.4em;
   font-size: 1rem;
   font-weight: normal;
   line-height: 1;
-  margin: 0 20px;
+  text-transform: uppercase;
 }
-.filter-options select {
+
+.filter-options .select-container {
+  width: 100%;
+}
+
+.filter-options .select-container select {
   background-color: white;
-  border: 1px solid #fff;
-  font-family: Arial,sans-serif;
-  font-size: 11pt;
-  height: 35px;
+  border-radius: 10px;
+  font-family: Arial, sans-serif;
+  font-size: 1em;
+  padding: 0.5em;
   letter-spacing: 0;
-  margin: 10px;
-  padding: 0 10px;
-  width: 200px;
+  width: calc(50% - 0.25em)
 }
 
 /* ====================== Restaurant Listing ====================== */
@@ -134,35 +153,36 @@ nav h1 a {
   background-color: #f3f3f3;
   list-style: outside none none;
   margin: 0;
-  padding: 30px 15px 60px;
+  padding: 1em;
   text-align: center;
 }
 #restaurants-list li {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   background-color: #fff;
-  border: 2px solid #ccc;
+  border: 1px solid #ccc;
+  border-radius: 10px;
+  box-shadow: 4px 6px 10px 0px #d4d4d4;
   font-family: Arial,sans-serif;
   margin: 15px;
-  min-height: 380px;
-  padding: 0 30px 25px;
   text-align: left;
-  width: 270px;
 }
 #restaurants-list .restaurant-img {
   background-color: #ccc;
+  border-radius: 10px 10px 0 0;
   display: block;
   margin: 0;
   max-width: 100%;
-  min-height: 248px;
-  min-width: 100%;
 }
 #restaurants-list li h1 {
   color: #f18200;
-  font-family: Arial,sans-serif;
+  font-family: Arial, sans-serif;
   font-size: 14pt;
   font-weight: 200;
-  letter-spacing: 0;
+  letter-spacing: 1px;
   line-height: 1.3;
-  margin: 20px 0 10px;
+  margin: 1em;
   text-transform: uppercase;
 }
 #restaurants-list p {
@@ -170,13 +190,14 @@ nav h1 a {
   font-size: 11pt;
 }
 #restaurants-list li a {
-  background-color: orange;
+  background: linear-gradient(#ffc966, orange);
   border-bottom: 3px solid #eee;
+  border-radius: 10px;
   color: #fff;
   display: inline-block;
   font-size: 10pt;
-  margin: 15px 0 0;
-  padding: 8px 30px 10px;
+  margin: 0.5em 1em;
+  padding: 0.5em 1em;
   text-align: center;
   text-decoration: none;
   text-transform: uppercase;
